[package]
name = "scrolldoubler"
version = "0.1.0"
authors = ["Sumeet Agarwal <sumeet.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = {git = "https://github.com/obv-mikhail/InputBot", branch = "master"}
